--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
     font-size: 3.5em;
     color: #fff;
     text-shadow: 2px 2px 4px #333;
+    white-space: nowrap;
 }
 
 .language-selector {
