--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     position: relative;
     width: 100%;
     background-color: #333;
-    padding: 20px 0;
+    padding: 1.1em 0;
 }
 
 .header-content {
@@ -174,7 +174,8 @@ a:hover, button:hover {
     }
   }
   
-/* Responsive design */
+
+
 /* Responsive design */
 @media (max-width: 992px) {
     .language-selector {
@@ -185,6 +186,11 @@ a:hover, button:hover {
         display: none;
         flex-direction: column;
         background-color: #333;
+    }
+    /* Responsive design */
+    /* Add this to show the language selector when toggled */
+    .language-selector.shown {
+        visibility: visible;
     }
 
     .language-selector a {
