--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ a:hover, button:hover {
 }
 
 .navbar {
-    background-color: #333;
+    background-color: #333333cb;
   }
   
   .navbar-toggler {
@@ -176,15 +176,15 @@ a:hover, button:hover {
   
 
 
-  @media (max-width: 992px) {
-    .language-selector {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      flex-direction: column;
-      background-color: #333;
-      visibility: hidden;
+/* Add the following media query to handle mobile devices */
+    @media (max-width: 992px) {
+        .logo-title {
+        font-size: 1.5em;
+        }
+    
+        .language-toggle {
+        display: none;
+        }
     }
   
     .language-selector a {
@@ -198,9 +198,14 @@ a:hover, button:hover {
     }
   
     .header {
-      position: relative;
-      padding-bottom: 50px;
-    }
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 80px;
+        padding: 0 20px;
+        background-color: #333;
+        color: #fff;
+      }
   
     .header:after {
       content: "";
@@ -212,6 +217,53 @@ a:hover, button:hover {
       height: 50px;
       background-color: #333;
     }
+    .dropdown {
+  position: relative;
+    }
+
+    .dropdown-toggle {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    font-size: 18px;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    }
+
+    .dropdown-toggle i {
+    margin-right: 10px;
+    }
+
+    .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 16px;
+    text-align: right;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    }
+
+    .dropdown-menu a {
+    display: block;
+    padding: 5px 15px;
+    color: #333;
+    text-decoration: none;
+    transition: background-color 0.3s;
+    }
+
+    .dropdown-menu a:hover {
+    background-color: #f5f5f5;
+    }
+
   
     .language-selector.shown {
       visibility: visible;
@@ -225,6 +277,20 @@ a:hover, button:hover {
       to {
         transform: translateY(0);
       }
+    }
+
+  /* Add these styles for the mobile toggle button */
+.mobile-toggle {
+    display: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 1.5em;
+    margin-right: 15px;
+  }
+  
+  @media (max-width: 992px) {
+    .mobile-toggle {
+      display: inline-block;
     }
   }
   
