--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ a:hover, button:hover {
   /* Add the following media query to handle mobile devices */
   @media (max-width: 992px) {
     .logo-title {
-      font-size: 1.5em;
+      font-size: 2.2em;
     }
   }
   
@@ -227,6 +227,10 @@ a:hover, button:hover {
       }
     }
   }
+  .header-info {
+    display: flex;
+    flex-direction: column;
+  }
   
   .contact-info {
     position: absolute;
@@ -250,5 +254,19 @@ a:hover, button:hover {
   
   .contact-info span {
     margin-right: 10px;
+  }
+  
+
+  /* Media query for smaller screens */
+@media screen and (max-width: 767px) {
+    .header-info {
+      align-items: center;
+    }
+  
+    .contact-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
   
