--- a/style.css
+++ b/style.css
@@ -265,8 +265,7 @@ a:hover, button:hover {
   
     .contact-info {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      align-items: left;
     }
   }
   
